src/test/deca/syntax/invalid/extension/TabElement.deca
// Description:
//    Tableau mal initialisé
//

{
    int[] a = {1, 2, 3};
    a{3} = 2;
}

